# bert_deploy

./: .gitignore  Bertmodel2ONNX.py  CMakeLists.txt  README.md  build_engine.sh  infer_ort.py  infer_rtr.cpp  infer_trt.cpp  log.txt  onnx2trt.cpp  torch2onnx.py
LayerNormPlugin/: LayerNormPlugin.cu  Makefile  testLayerNormPlugin.py
tools/: ioHelper.h
trt_builder/: builder.py  calibrator.py  trt_helper.py
